# YARGLE

./: .gitignore  LICENSE  README.md  features.md  fix-trailing-dots.ps1  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: album_art.rs  commands.rs  lib.rs  local_db.rs  main.rs  rhythmverse.rs  scan_cache.rs  updater.rs
src-tauri/src/dta/: mod.rs  parser.rs  serializer.rs  types.rs  validator.rs
src-tauri/src/midi/: parser.rs  types.rs
src-tauri/src/song_ini/: mod.rs
src-tauri/src/stfs/: filesystem.rs  header.rs  mod.rs  texture.rs  writer.rs
src/components/: BatchEditModal.tsx  ChartPreviewModal.tsx  DifficultyRing.tsx  DuplicateModal.tsx  FileList.tsx  IconSelector.tsx  ImageEditor.tsx  MetadataEditor.tsx  MoggDecryptModal.tsx  OrganizeModal.tsx  RenameModal.tsx  RhythmVerseModal.tsx  ScoreSyncModal.tsx  SearchBar.tsx  SongScores.tsx  ValidatorModal.tsx
src/data/: sources.json
src/hooks/: useSongFiles.ts
